# realtime-ecommerce-insights

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-container.txt  requirements.txt
.github/workflows/: ci.yml
docs/: data-contract.md  data-model.md  runbook.md
docs/assets/: architecture-realtime-commerce.excalidraw
powerbi/: README.md  vietnam_provinces.csv
presentation/realtime-ecommerce-vi/: index.html  realtime-ecommerce-vi-notes.md
realtime_commerce/: __init__.py  cli.py  contracts.py  generator.py  pipeline.py  producer.py
scripts/: run_kafka_stream.py
tests/: test_streaming_pipeline.py
