[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-ecommerce-insights"
version = "1.0.0"
description = "Kafka and Spark Structured Streaming e-commerce analytics platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nguyen Phuc Gia Bao" }]
dependencies = [
  "kafka-python-ng==2.2.3",
  "numpy==2.2.6",
  "pandas==2.3.3",
  "pyarrow==21.0.0",
  "pyspark==4.0.0",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2", "ruff==0.12.12"]

[project.scripts]
ecommerce-stream = "realtime_commerce.cli:main"

[tool.setuptools.packages.find]
include = ["realtime_commerce*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
